@@ -23,12 +23,10 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.intellij.execution.ExecutionTarget;
 import com.intellij.execution.configurations.RunConfiguration;
-import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.UserDataHolderBase;
 import icons.StudioIcons;
 import java.awt.EventQueue;
 import java.util.Collection;
-import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -58,6 +56,9 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
       .map(device -> device.isRunningAsync(appPackage))
       .collect(Collectors.toList());
 
+    // The EDT and Action Updater (Common) threads call into this. Ideally we'd use the respective executors here instead of the direct
+    // executor. But we don't have access to the Action Updater (Common) executor.
+
     // noinspection UnstableApiUsage, SpellCheckingInspection
     return Futures.transform(Futures.successfulAsList(futures), runnings -> runnings.contains(true), MoreExecutors.directExecutor());
   }
@@ -65,8 +66,8 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
   @Override
   public boolean isApplicationRunning(@NotNull String appPackage) {
     if (Thread.currentThread().getName().equals("Action Updater (Common)") || EventQueue.isDispatchThread()) {
-      Logger.getInstance(DeviceAndSnapshotComboBoxExecutionTarget.class)
-        .error("Blocking Future::get call on an Action Updater (Common) thread or the EDT http://b/261501171");
+      Loggers.errorConditionally(DeviceAndSnapshotComboBoxExecutionTarget.class,
+                                 "Blocking Future::get call on an Action Updater (Common) thread or the EDT http://b/261501171");
     }
 
     return Futures.getUnchecked(isApplicationRunningAsync(appPackage));
@@ -87,6 +88,9 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
     @SuppressWarnings("UnstableApiUsage")
     var future = Futures.successfulAsList(futures);
 
+    // The EDT and Action Updater (Common) threads call into this. Ideally we'd use the respective executors here instead of the direct
+    // executor. But we don't have access to the Action Updater (Common) executor.
+
     // noinspection UnstableApiUsage
     return Futures.transform(future, DeviceAndSnapshotComboBoxExecutionTarget::filterNonNull, MoreExecutors.directExecutor());
   }
@@ -100,6 +104,12 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
   @NotNull
   @Override
   public Collection<IDevice> getRunningDevices() {
+    if (Thread.currentThread().getName().equals("Action Updater (Common)") || EventQueue.isDispatchThread()) {
+      Loggers.errorConditionally(DeviceAndSnapshotComboBoxExecutionTarget.class,
+                                 "Blocking Future::get calls on an Action Updater (Common) thread or the EDT http://b/259746412, " +
+                                 "http://b/259746444, http://b/259746749, http://b/259747002, http://b/259747870, and http://b/259747965");
+    }
+
     return deviceStream()
       .filter(Device::isConnected)
       .map(Device::getDdmlibDeviceAsync)
@@ -127,22 +137,19 @@ final class DeviceAndSnapshotComboBoxExecutionTarget extends AndroidExecutionTar
   @NotNull
   @Override
   public String getDisplayName() {
-    List<Device> devices = deviceStream().collect(Collectors.toList());
+    var devices = deviceStream().toList();
 
-    switch (devices.size()) {
-      case 0:
-        return "No Devices";
-      case 1:
-        return devices.get(0).getName();
-      default:
-        return "Multiple Devices";
-    }
+    return switch (devices.size()) {
+      case 0 -> "No Devices";
+      case 1 -> devices.get(0).getName();
+      default -> "Multiple Devices";
+    };
   }
 
   @NotNull
   @Override
   public Icon getIcon() {
-    List<Device> devices = deviceStream().collect(Collectors.toList());
+    var devices = deviceStream().toList();
 
     if (devices.size() == 1) {
       return devices.get(0).getIcon();
